[gd_scene load_steps=5 format=4 uid="uid://bkxe6giqbs0oj"]

[ext_resource type="Script" path="res://Scripts/Master.gd" id="1_imjb1"]
[ext_resource type="Texture2D" uid="uid://cg4fehe6s315l" path="res://Assets/HexTiles.png" id="2_q2kbt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1ncv1"]
texture = ExtResource("2_q2kbt")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
3:1/0 = 0
2:1/0 = 0
5:1/0 = 0
4:1/0 = 0

[sub_resource type="TileSet" id="TileSet_26eaa"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(102, 94)
custom_data_layer_0/name = "bomb"
custom_data_layer_0/type = 1
sources/1 = SubResource("TileSetAtlasSource_1ncv1")

[node name="Master" type="Node2D"]
script = ExtResource("1_imjb1")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
offset_left = -3674.0
offset_top = -2407.0
offset_right = 55402.0
offset_bottom = 41929.0
color = Color(0.288518, 0.288518, 0.288518, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = 1
position = Vector2(54, 31)
tile_map_data = PackedByteArray("AAABAAQAAQAAAAAAAAACAAQAAQAAAAAAAAADAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAABAAUAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAKAAYAAQAAAAAAAAAMAAYAAQAAAAAAAAAOAAYAAQAAAAAAAAADAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAJAAUAAQAAAAAAAAALAAUAAQAAAAAAAAANAAUAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAALAAQAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAANAAQAAQAAAAAAAAANAAMAAQAAAAAAAAAMAAMAAQAAAAAAAAALAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAJAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAKAAMAAQAAAAAAAAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAEAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAALAAAAAQAAAAAAAAAMAAEAAQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAADAAEAAQAAAAAAAAABAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAEAAQAAAAAAAAAEAAAAAQAAAAAAAAACAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAAOAAEAAQAAAAAAAAANAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAALAAIAAQAAAAAAAAAKAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAADAAMAAQAAAAAAAAACAAMAAQAAAAAAAAABAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAAGAAIAAQAAAAAAAAAIAAIAAQAAAAAAAAAJAAEAAQAAAAAAAAALAAEAAQAAAAAAAAACAAIAAQAAAAAAAAABAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAOAAIAAQAAAAAAAAANAAIAAQAAAAAAAAAHAAIAAQAAAAAAAAABAAYAAQAAAAAAAAADAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAALAAYAAQAAAAAAAAANAAYAAQAAAAAAAAAHAAMAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_26eaa")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 359)
zoom = Vector2(0.9, 0.9)
limit_left = 0
limit_top = 0
limit_right = 1285
limit_bottom = 791
limit_smoothed = true
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Restart Popup" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchor_top = 0.013
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 553.0
offset_top = 272.576
offset_right = -559.0
offset_bottom = -327.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4

[node name="Background" type="ColorRect" parent="CanvasLayer/Restart Popup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -51.0
offset_right = 131.5
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2484, 0.2484, 0.2484, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Restart Popup"]
layout_mode = 0
offset_left = -111.0
offset_top = -31.0
offset_right = 152.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]Restart?"

[node name="YesRestart" type="Button" parent="CanvasLayer/Restart Popup"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = -94.5
offset_top = 18.0
offset_right = -29.5
offset_bottom = 58.0
text = "Restart"

[node name="QuitToMenu" type="Button" parent="CanvasLayer/Restart Popup"]
modulate = Color(1, 0.966667, 0, 1)
layout_mode = 0
offset_left = -15.0
offset_top = 18.0
offset_right = 49.0
offset_bottom = 58.0
text = "Quit"

[node name="NoRestart" type="Button" parent="CanvasLayer/Restart Popup"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 60.5
offset_top = 18.0
offset_right = 139.5
offset_bottom = 58.0
text = "Continue"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.415686)
offset_left = 15.0
offset_top = 15.0
offset_right = 157.0
offset_bottom = 55.0
text = "Press R to restart"

[connection signal="pressed" from="CanvasLayer/Restart Popup/YesRestart" to="." method="_on_yes_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Restart Popup/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Restart Popup/NoRestart" to="." method="_on_no_restart_pressed"]
